[gd_scene load_steps=11 format=3 uid="uid://cyrtmhyh80wky"]

[ext_resource type="Script" uid="uid://dyetseeklrsnv" path="res://scenes/game_screens/tutorial_scene/tutorial_scene.gd" id="1_o4uci"]
[ext_resource type="Theme" uid="uid://byipc7885d36k" path="res://assets/themes/containers/margins.tres" id="2_svpts"]
[ext_resource type="Theme" uid="uid://cyg5ph8t5r3an" path="res://assets/themes/pogress_bars/health_bar.tres" id="3_12foi"]
[ext_resource type="Theme" uid="uid://s3vdgnfngf8t" path="res://assets/themes/buttons/base_button.tres" id="4_k8oc5"]
[ext_resource type="Theme" uid="uid://cw8nt1ujujme5" path="res://assets/themes/pogress_bars/stress_bar.tres" id="5_4upvm"]
[ext_resource type="PackedScene" uid="uid://cfakfcxv3v857" path="res://scenes/components/time_console/time_console.tscn" id="5_tn23m"]
[ext_resource type="Theme" uid="uid://bswpnwdxk7u3p" path="res://assets/themes/labels/information_label.tres" id="6_msk43"]
[ext_resource type="StyleBox" uid="uid://c2i6ph0kfgsyq" path="res://assets/themes/style_box_flat/Highlight_red.tres" id="7_ocoga"]
[ext_resource type="Theme" uid="uid://c3rtyequje3qa" path="res://assets/themes/labels/tutorial_text_label.tres" id="8_lpvb4"]
[ext_resource type="Theme" uid="uid://dr271k0ak7r0l" path="res://assets/themes/buttons/transparent_button.tres" id="10_4upvm"]

[node name="TutorialScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o4uci")

[node name="TutorialSceneContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_svpts")

[node name="TutorialStatsConsole" type="VBoxContainer" parent="TutorialSceneContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8

[node name="HealthLabel" type="Label" parent="TutorialSceneContainer/TutorialStatsConsole"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("6_msk43")
theme_type_variation = &"HeaderLarge"
text = "Comfort:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="TutorialSceneContainer/TutorialStatsConsole"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
theme = ExtResource("3_12foi")
step = 1.0
value = 100.0
rounded = true
show_percentage = false

[node name="StressLabel" type="Label" parent="TutorialSceneContainer/TutorialStatsConsole"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("6_msk43")
theme_type_variation = &"HeaderLarge"
text = "Hunger:"

[node name="StressBar" type="ProgressBar" parent="TutorialSceneContainer/TutorialStatsConsole"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
theme = ExtResource("5_4upvm")
show_percentage = false

[node name="EnergyLabel" type="Label" parent="TutorialSceneContainer/TutorialStatsConsole"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("6_msk43")
theme_type_variation = &"HeaderLarge"
text = "Energy:"

[node name="EnergyBar" type="ProgressBar" parent="TutorialSceneContainer/TutorialStatsConsole"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
theme = ExtResource("3_12foi")
step = 1.0
value = 100.0
rounded = true
show_percentage = false

[node name="SaveClearButton" type="Button" parent="TutorialSceneContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
theme = ExtResource("4_k8oc5")
text = "Clear save (debug only)"

[node name="TimeConsole" parent="TutorialSceneContainer" instance=ExtResource("5_tn23m")]
unique_name_in_owner = true
layout_mode = 2

[node name="ActivitiesContainer" type="VBoxContainer" parent="TutorialSceneContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="ActivityContainer" type="MarginContainer" parent="TutorialSceneContainer/ActivitiesContainer"]
layout_mode = 2

[node name="CryActivityContainer" type="HBoxContainer" parent="TutorialSceneContainer/ActivitiesContainer/ActivityContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("2_svpts")

[node name="CryTimeLabel" type="Label" parent="TutorialSceneContainer/ActivitiesContainer/ActivityContainer/CryActivityContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("6_msk43")
theme_type_variation = &"HeaderLarge"
text = "Cry: 0 hours "

[node name="CryAssignTimeButton" type="Button" parent="TutorialSceneContainer/ActivitiesContainer/ActivityContainer/CryActivityContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
text = "+1"

[node name="CryUnassignTimeButton" type="Button" parent="TutorialSceneContainer/ActivitiesContainer/ActivityContainer/CryActivityContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "-1"

[node name="TutorialProgresses" type="Control" parent="TutorialSceneContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TutorialProgress1" type="Control" parent="TutorialSceneContainer/TutorialProgresses"]
unique_name_in_owner = true
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = -15.0
offset_top = -15.0
offset_right = -15.0
offset_bottom = -15.0
mouse_filter = 2

[node name="HighLightPanel" type="Panel" parent="TutorialSceneContainer/TutorialProgresses/TutorialProgress1"]
layout_mode = 0
offset_left = 219.0
offset_top = 397.0
offset_right = 294.0
offset_bottom = 476.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("7_ocoga")

[node name="Turorial1Label" type="Label" parent="TutorialSceneContainer/TutorialProgresses/TutorialProgress1"]
layout_mode = 0
offset_left = 434.0
offset_top = 403.0
offset_right = 1288.0
offset_bottom = 523.0
theme = ExtResource("8_lpvb4")
text = "Congratulations! You just unlocked the ability to cry. Click the +1 button to start spending time on this activity. "
autowrap_mode = 3

[node name="TutorialProgress2" type="Control" parent="TutorialSceneContainer/TutorialProgresses"]
unique_name_in_owner = true
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = -15.0
offset_top = -15.0
offset_right = -15.0
offset_bottom = -15.0

[node name="Turorial2Label" type="Label" parent="TutorialSceneContainer/TutorialProgresses/TutorialProgress2"]
layout_mode = 0
offset_left = 434.0
offset_top = 403.0
offset_right = 1288.0
offset_bottom = 523.0
theme = ExtResource("8_lpvb4")
text = "Well done! Let's wait a bit to see what this does..."
autowrap_mode = 3

[node name="TutorialProgress3" type="Control" parent="TutorialSceneContainer/TutorialProgresses"]
unique_name_in_owner = true
visible = false
layout_mode = 2
anchors_preset = 0
offset_right = 1570.0
offset_bottom = 870.0
mouse_filter = 2

[node name="Turorial3Label" type="Label" parent="TutorialSceneContainer/TutorialProgresses/TutorialProgress3"]
layout_mode = 0
offset_left = 434.0
offset_top = 403.0
offset_right = 1288.0
offset_bottom = 523.0
theme = ExtResource("8_lpvb4")
text = "Excellent choice. You can now spend more hours crying! Perhaps assigning more time to this activity will help satiate your hunger?"
autowrap_mode = 3

[node name="TutorialProgress4" type="Control" parent="TutorialSceneContainer/TutorialProgresses"]
unique_name_in_owner = true
visible = false
layout_mode = 2
anchors_preset = 0
offset_right = 1570.0
offset_bottom = 870.0

[node name="ContinueButton4_1" type="Button" parent="TutorialSceneContainer/TutorialProgresses/TutorialProgress4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_4upvm")

[node name="Turorial4Label" type="Label" parent="TutorialSceneContainer/TutorialProgresses/TutorialProgress4"]
layout_mode = 0
offset_left = 434.0
offset_top = 403.0
offset_right = 1288.0
offset_bottom = 523.0
theme = ExtResource("8_lpvb4")
text = "Excellent choice. Let's just wait until someone takes care of your hunger.

(click to continue)"
autowrap_mode = 3

[node name="TutorialProgress5" type="Control" parent="TutorialSceneContainer/TutorialProgresses"]
unique_name_in_owner = true
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = -15.0
offset_top = -15.0
offset_right = -15.0
offset_bottom = -15.0
mouse_filter = 2

[node name="HighLightPanel" type="Panel" parent="TutorialSceneContainer/TutorialProgresses/TutorialProgress5"]
layout_mode = 0
offset_left = 1418.0
offset_top = 13.0
offset_right = 1592.0
offset_bottom = 276.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("7_ocoga")

[node name="Turorial5Label" type="Label" parent="TutorialSceneContainer/TutorialProgresses/TutorialProgress5"]
layout_mode = 0
offset_left = 434.0
offset_top = 403.0
offset_right = 1288.0
offset_bottom = 523.0
theme = ExtResource("8_lpvb4")
text = "These are your stats! You are not sure what they mean yet, but it seems important to keep them green."
autowrap_mode = 3
